chore: Update train.py to use VGG16 weights if architecture is vgg16

--- a/Image Classifier Project.ipynb
+++ b/Image Classifier Project.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,6 +38,7 @@
     "from torch.utils.data import DataLoader, Subset\n",
     "from torchvision import datasets, models, transforms\n",
     "from torch.cuda.amp import GradScaler, autocast\n",
+    "from torchvision.models import VGG16_Weights\n",
     "import matplotlib.pyplot as plt\n",
     "import random\n",
     "import numpy as np\n",
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,47 +171,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/anaconda3/lib/python3.12/site-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
-      "  warnings.warn(\n",
-      "/opt/anaconda3/lib/python3.12/site-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=VGG16_Weights.IMAGENET1K_V1`. You can also use `weights=VGG16_Weights.DEFAULT` to get the most up-to-date weights.\n",
-      "  warnings.warn(msg)\n",
-      "/var/folders/mz/1c03knr10fvcbp5gmbsxs8h80000gn/T/ipykernel_4451/1860824227.py:19: FutureWarning: `torch.cuda.amp.GradScaler(args...)` is deprecated. Please use `torch.amp.GradScaler('cuda', args...)` instead.\n",
+      "/var/folders/mz/1c03knr10fvcbp5gmbsxs8h80000gn/T/ipykernel_4451/4060104495.py:20: FutureWarning: `torch.cuda.amp.GradScaler(args...)` is deprecated. Please use `torch.amp.GradScaler('cuda', args...)` instead.\n",
       "  scaler = GradScaler()\n",
-      "/opt/anaconda3/lib/python3.12/site-packages/torch/amp/grad_scaler.py:132: UserWarning: torch.cuda.amp.GradScaler is enabled, but CUDA is not available.  Disabling.\n",
-      "  warnings.warn(\n",
-      "/var/folders/mz/1c03knr10fvcbp5gmbsxs8h80000gn/T/ipykernel_4451/1860824227.py:47: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.\n",
-      "  with autocast():\n",
-      "/opt/anaconda3/lib/python3.12/site-packages/torch/amp/autocast_mode.py:265: UserWarning: User provided device_type of 'cuda', but CUDA is not available. Disabling\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 1/10.. Training Loss: 5.606.. Validation Loss: 5.690.. Validation Accuracy: 0.016\n",
-      "Epoch: 2/10.. Training Loss: 4.812.. Validation Loss: 5.997.. Validation Accuracy: 0.016\n",
-      "Epoch: 3/10.. Training Loss: 3.724.. Validation Loss: 5.500.. Validation Accuracy: 0.078\n",
-      "Epoch: 4/10.. Training Loss: 2.665.. Validation Loss: 5.854.. Validation Accuracy: 0.148\n",
-      "Epoch: 5/10.. Training Loss: 2.212.. Validation Loss: 6.473.. Validation Accuracy: 0.070\n",
-      "Epoch: 6/10.. Training Loss: 1.684.. Validation Loss: 6.363.. Validation Accuracy: 0.148\n",
-      "Epoch: 7/10.. Training Loss: 0.995.. Validation Loss: 5.500.. Validation Accuracy: 0.273\n",
-      "Epoch: 8/10.. Training Loss: 0.764.. Validation Loss: 6.307.. Validation Accuracy: 0.336\n",
-      "Epoch: 9/10.. Training Loss: 0.538.. Validation Loss: 6.833.. Validation Accuracy: 0.281\n",
-      "Epoch: 10/10.. Training Loss: 0.508.. Validation Loss: 6.985.. Validation Accuracy: 0.281\n"
+      "/var/folders/mz/1c03knr10fvcbp5gmbsxs8h80000gn/T/ipykernel_4451/4060104495.py:36: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.\n",
+      "  with autocast():\n"
      ]
     }
    ],
    "source": [
     "# Load the pre-trained VGG16 model\n",
-    "model = models.vgg16(pretrained=True)\n",
+    "# model = models.vgg16(pretrained=True)\n",
+    "model = models.vgg16(weights=models.VGG16_Weights.IMAGENET1K_V1)\n",
     "epochs=5 \n",
     "learning_rate=0.001\n",
     "\n",
@@ -234,30 +212,18 @@
     "optimizer = optim.Adam(model.classifier.parameters(), learning_rate)\n",
     "criterion = nn.NLLLoss()\n",
     "\n",
-    "# Reduce the dataset size for quick testing\n",
-    "subset_size = 100  # Define the subset size\n",
-    "train_indices = random.sample(range(len(train_loader.dataset)), subset_size)\n",
-    "valid_indices = random.sample(range(len(valid_loader.dataset)), subset_size)\n",
-    "\n",
-    "train_subset = Subset(train_loader.dataset, train_indices)\n",
-    "valid_subset = Subset(valid_loader.dataset, valid_indices)\n",
-    "\n",
-    "trainloader = torch.utils.data.DataLoader(train_subset, batch_size=32, shuffle=True)\n",
-    "validloader = torch.utils.data.DataLoader(valid_subset, batch_size=32, shuffle=True)\n",
-    "\n",
     "train_losses, valid_losses = [], []\n",
-    "epochs = 10  # Define the number of epochs\n",
     "\n",
     "for e in range(epochs):\n",
     "    running_loss = 0\n",
     "    model.train()\n",
-    "    for images, labels in trainloader:\n",
+    "    for images, labels in train_loader:\n",
     "        images, labels = images.to(device), labels.to(device)\n",
     "        optimizer.zero_grad()\n",
     "        \n",
     "        with autocast():\n",
-    "            outputs = model(images)\n",
-    "            loss = criterion(outputs, labels)\n",
+    "            log_ps = model(images)\n",
+    "            loss = criterion(log_ps, labels)\n",
     "        \n",
     "        scaler.scale(loss).backward()\n",
     "        scaler.step(optimizer)\n",
@@ -271,7 +237,7 @@
     "        \n",
     "        model.eval()  # Set model to evaluation mode\n",
     "        with torch.no_grad():\n",
-    "            for images, labels in validloader:\n",
+    "            for images, labels in valid_loader:\n",
     "                images, labels = images.to(device), labels.to(device)\n",
     "                log_ps = model(images)\n",
     "                valid_loss += criterion(log_ps, labels).item()\n",
@@ -281,13 +247,13 @@
     "                equals = top_class == labels.view(*top_class.shape)\n",
     "                accuracy += torch.mean(equals.type(torch.FloatTensor)).item()\n",
     "                \n",
-    "        train_losses.append(running_loss / len(trainloader))\n",
-    "        valid_losses.append(valid_loss / len(validloader))\n",
+    "        train_losses.append(running_loss / len(train_loader))\n",
+    "        valid_losses.append(valid_loss / len(valid_loader))\n",
     "\n",
     "        print(f\"Epoch: {e+1}/{epochs}.. \"\n",
-    "              f\"Training Loss: {running_loss / len(trainloader):.3f}.. \"\n",
-    "              f\"Validation Loss: {valid_loss / len(validloader):.3f}.. \"\n",
-    "              f\"Validation Accuracy: {accuracy / len(validloader):.3f}\")"
+    "              f\"Training Loss: {running_loss / len(train_loader):.3f}.. \"\n",
+    "              f\"Validation Loss: {valid_loss / len(valid_loader):.3f}.. \"\n",
+    "              f\"Validation Accuracy: {accuracy / len(valid_loader):.3f}\")"
    ]
   },
   {
