refactor: Add VGG16 model support to supported_models.py

--- a/Image Classifier Project.ipynb
+++ b/Image Classifier Project.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,25 +189,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 1/5.. Training Loss: 5.650.. Validation Loss: 4.009.. Validation Accuracy: 0.192\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
+     "ename": "RuntimeError",
+     "evalue": "unsupported scalarType",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[70], line 54\u001b[0m\n\u001b[1;32m     52\u001b[0m images, labels \u001b[38;5;241m=\u001b[39m images\u001b[38;5;241m.\u001b[39mto(device), labels\u001b[38;5;241m.\u001b[39mto(device)\n\u001b[1;32m     53\u001b[0m log_ps \u001b[38;5;241m=\u001b[39m model(images)\n\u001b[0;32m---> 54\u001b[0m valid_loss \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m criterion(log_ps, labels)\u001b[38;5;241m.\u001b[39mitem()\n\u001b[1;32m     56\u001b[0m ps \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mexp(log_ps)\n\u001b[1;32m     57\u001b[0m top_p, top_class \u001b[38;5;241m=\u001b[39m ps\u001b[38;5;241m.\u001b[39mtopk(\u001b[38;5;241m1\u001b[39m, dim\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 35\u001b[0m\n\u001b[1;32m     32\u001b[0m images, labels \u001b[38;5;241m=\u001b[39m images\u001b[38;5;241m.\u001b[39mto(device), labels\u001b[38;5;241m.\u001b[39mto(device)\n\u001b[1;32m     33\u001b[0m optimizer\u001b[38;5;241m.\u001b[39mzero_grad()\n\u001b[0;32m---> 35\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m torch\u001b[38;5;241m.\u001b[39mamp\u001b[38;5;241m.\u001b[39mautocast(device_type\u001b[38;5;241m=\u001b[39mdevice\u001b[38;5;241m.\u001b[39mtype):\n\u001b[1;32m     36\u001b[0m     log_ps \u001b[38;5;241m=\u001b[39m model(images)\n\u001b[1;32m     37\u001b[0m     loss \u001b[38;5;241m=\u001b[39m criterion(log_ps, labels)\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/torch/amp/autocast_mode.py:229\u001b[0m, in \u001b[0;36mautocast.__init__\u001b[0;34m(self, device_type, dtype, enabled, cache_enabled)\u001b[0m\n\u001b[1;32m    225\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    226\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mExpected `device_type` of type `str`, got: `\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(device_type)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m`\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    227\u001b[0m     )\n\u001b[1;32m    228\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m dtype \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m--> 229\u001b[0m     dtype \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mget_autocast_dtype(device_type)\n\u001b[1;32m    230\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m torch\u001b[38;5;241m.\u001b[39m_jit_internal\u001b[38;5;241m.\u001b[39mis_scripting():\n\u001b[1;32m    231\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_enabled \u001b[38;5;241m=\u001b[39m enabled\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: unsupported scalarType"
      ]
     }
    ],
@@ -231,7 +225,7 @@
     "\n",
     "model.classifier = classifier\n",
     "model.to(device)\n",
-    "scaler = torch.amp.GradScaler('cuda')\n",
+    "scaler = torch.amp.GradScaler(enabled=(device.type == 'cuda'))\n",
     "\n",
     "# Define Optimizer and Loss Function`\n",
     "optimizer = optim.Adam(model.classifier.parameters(), learning_rate)\n",
@@ -246,7 +240,7 @@
     "        images, labels = images.to(device), labels.to(device)\n",
     "        optimizer.zero_grad()\n",
     "        \n",
-    "        with torch.amp.autocast('cuda'):\n",
+    "        with autocast(device_type=device.type):\n",
     "            log_ps = model(images)\n",
     "            loss = criterion(log_ps, labels)\n",
     "        \n",
@@ -292,14 +286,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Loss: 4.012.. Test Accuracy: 28.33%\n"
+      "Test Loss: 3.715.. Test Accuracy: 27.78%\n"
      ]
     }
    ],
@@ -343,20 +337,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model and additional information saved successfully.\n"
+     "ename": "AttributeError",
+     "evalue": "'Subset' object has no attribute 'class_to_idx'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Assuming `model` is your trained model and `class_to_idx` is your class-to-index mapping\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m model\u001b[38;5;241m.\u001b[39mclass_to_idx \u001b[38;5;241m=\u001b[39m train_datasets\u001b[38;5;241m.\u001b[39mclass_to_idx\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Create a dictionary to save the model state and additional information\u001b[39;00m\n\u001b[1;32m      5\u001b[0m checkpoint \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mclassifier\u001b[39m\u001b[38;5;124m'\u001b[39m: model\u001b[38;5;241m.\u001b[39mclassifier,\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmodel_state_dict\u001b[39m\u001b[38;5;124m'\u001b[39m: model\u001b[38;5;241m.\u001b[39mstate_dict(),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mepochs\u001b[39m\u001b[38;5;124m'\u001b[39m: epochs\n\u001b[1;32m     11\u001b[0m }\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Subset' object has no attribute 'class_to_idx'"
      ]
     }
    ],
    "source": [
     "# Assuming `model` is your trained model and `class_to_idx` is your class-to-index mapping\n",
-    "model.class_to_idx = train_datasets.class_to_idx\n",
+    "if isinstance(train_loader.dataset, torch.utils.data.Subset):\n",
+    "    original_dataset = train_loader.dataset.dataset\n",
+    "else:\n",
+    "    original_dataset = train_loader.dataset\n",
+    "\n",
+    "class_to_idx = original_dataset.class_to_idx\n",
     "\n",
     "# Create a dictionary to save the model state and additional information\n",
     "checkpoint = {\n",
@@ -384,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -702,6 +705,16 @@
     "\n",
     "# Display the image and predictions\n",
     "display_image_and_predictions(image_path,model,cat_to_name,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Display the image and predictions\n",
+    "display_image_and_predictions('flowers/test/1/image_06743.jpg',model,cat_to_name,5)\n"
    ]
   }
  ],
