refactor: Fix unsupported scalarType error in Image Classifier Project.ipynb

--- a/Image Classifier Project.ipynb
+++ b/Image Classifier Project.ipynb
@@ -189,19 +189,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "RuntimeError",
-     "evalue": "unsupported scalarType",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 35\u001b[0m\n\u001b[1;32m     32\u001b[0m images, labels \u001b[38;5;241m=\u001b[39m images\u001b[38;5;241m.\u001b[39mto(device), labels\u001b[38;5;241m.\u001b[39mto(device)\n\u001b[1;32m     33\u001b[0m optimizer\u001b[38;5;241m.\u001b[39mzero_grad()\n\u001b[0;32m---> 35\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m torch\u001b[38;5;241m.\u001b[39mamp\u001b[38;5;241m.\u001b[39mautocast(device_type\u001b[38;5;241m=\u001b[39mdevice\u001b[38;5;241m.\u001b[39mtype):\n\u001b[1;32m     36\u001b[0m     log_ps \u001b[38;5;241m=\u001b[39m model(images)\n\u001b[1;32m     37\u001b[0m     loss \u001b[38;5;241m=\u001b[39m criterion(log_ps, labels)\n",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/torch/amp/autocast_mode.py:229\u001b[0m, in \u001b[0;36mautocast.__init__\u001b[0;34m(self, device_type, dtype, enabled, cache_enabled)\u001b[0m\n\u001b[1;32m    225\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    226\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mExpected `device_type` of type `str`, got: `\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(device_type)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m`\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    227\u001b[0m     )\n\u001b[1;32m    228\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m dtype \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m--> 229\u001b[0m     dtype \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mget_autocast_dtype(device_type)\n\u001b[1;32m    230\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m torch\u001b[38;5;241m.\u001b[39m_jit_internal\u001b[38;5;241m.\u001b[39mis_scripting():\n\u001b[1;32m    231\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_enabled \u001b[38;5;241m=\u001b[39m enabled\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: unsupported scalarType"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 1/5.. Training Loss: 5.658.. Validation Loss: 3.913.. Validation Accuracy: 0.228\n",
+      "Epoch: 2/5.. Training Loss: 4.254.. Validation Loss: 3.129.. Validation Accuracy: 0.357\n",
+      "Epoch: 3/5.. Training Loss: 3.444.. Validation Loss: 2.488.. Validation Accuracy: 0.513\n",
+      "Epoch: 4/5.. Training Loss: 2.872.. Validation Loss: 1.909.. Validation Accuracy: 0.603\n",
+      "Epoch: 5/5.. Training Loss: 2.256.. Validation Loss: 1.238.. Validation Accuracy: 0.804\n"
      ]
     }
    ],
@@ -240,9 +239,13 @@
     "        images, labels = images.to(device), labels.to(device)\n",
     "        optimizer.zero_grad()\n",
     "        \n",
-    "        with autocast(device_type=device.type):\n",
-    "            log_ps = model(images)\n",
-    "            loss = criterion(log_ps, labels)\n",
+    "        if device.type == 'cuda':\n",
+    "            with torch.amp.autocast(device_type=device.type):\n",
+    "                output = model(images)\n",
+    "                loss = criterion(output, labels)\n",
+    "        else:\n",
+    "            output = model(images)\n",
+    "            loss = criterion(output, labels)\n",
     "        \n",
     "        scaler.scale(loss).backward()\n",
     "        scaler.step(optimizer)\n",
